[package]
name = "lmfu"
version = "1.0.2"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "Low Memory Footprint Utilities (String, HashMap, JSON)"
license = "MIT"
categories = [ "data-structures", "parser-implementations", "no-std" ]
keywords = [ "memory", "hashmap", "arc", "json", "no_std" ]
repository = "https://github.com/NathanRoyer/bsutils"

[lib]
path = "lib.rs"

[dependencies]
litemap = { version = "0.7.0", optional = true }
arcstr = { version = "1.1.5", optional = true, default-features = false }
ahash   = { version = "0.8.3", optional = true, default-features = false }

[features]
default = [ "hashmap", "litemap", "json", "arcstr", "stringlist" ]
arcstr = [ "dep:arcstr" ]
stringlist = []
json = [ "dep:litemap", "dep:ahash", "arcstr", "stringlist" ]
hashmap = [ "dep:ahash", "dep:litemap" ]
litemap = [ "dep:litemap" ]

[build-dependencies]
rand = "0.8.5"
