[package]
name = "lmfu"
version = "1.2.1"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "Low Memory Footprint Utilities (String, HashMap, JSON)"
license = "MIT"
categories = [ "data-structures", "parser-implementations", "no-std" ]
keywords = [ "memory", "hashmap", "arc", "json", "no_std" ]
repository = "https://github.com/NathanRoyer/bsutils"

[lib]
path = "lib.rs"

[dependencies]
litemap  = { version = "0.7.0", optional = true }
strpool  = { version = "1.0.1", optional = true }
arcstr   = { version = "1.1.5", optional = true, default-features = false }
ahash    = { version = "0.8.3", optional = true, default-features = false }

[dependencies.thin-vec]
git = "https://github.com/NathanRoyer/thin-vec.git"
optional = true
default-features = false

[features]
default = [ "hashmap", "litemap", "json", "arcstr", "thinvec" ]
arcstr = [ "dep:arcstr" ]
thinvec = [ "dep:thin-vec" ]
json = [ "dep:litemap", "dep:ahash", "dep:strpool", "arcstr", "thinvec" ]
hashmap = [ "dep:ahash", "dep:litemap" ]
litemap = [ "dep:litemap" ]

[build-dependencies]
rand = "0.8.5"
