[package]
name = "lmfu"
version = "1.3.0"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "Low Memory Footprint Utilities (String, HashMap, JSON)"
license = "MIT"
categories = [ "data-structures", "parser-implementations", "no-std" ]
keywords = [ "memory", "hashmap", "arc", "json", "no_std" ]
repository = "https://github.com/NathanRoyer/bsutils"

[lib]
path = "lib.rs"

[dependencies]
litemap  = { version = "0.7.0", optional = true }
strpool  = { path = "../strpool", optional = true }
arcstr   = { version = "1.1.5", optional = true, default-features = false }
ahash    = { version = "0.8.3", optional = true, default-features = false }
arrayvec  = { version = "0.7.4", optional = true, default-features = false }
# thin-vec = { version = "0.2.13", optional = true, default-features = false }

[features]
default = [ "hashmap", "litemap", "json", "arcstr", "thinvec", "arrayvec" ]
arcstr = [ "dep:arcstr" ]
strpool = [ "dep:strpool" ]
json = [ "dep:litemap", "dep:ahash", "strpool", "arcstr", "thinvec" ]
hashmap = [ "dep:ahash", "dep:litemap" ]
litemap = [ "dep:litemap" ]
arrayvec = [ "dep:arrayvec" ]

thinvec = [
    # "dep:thin-vec"
]

[build-dependencies]
rand = "0.8.5"
